force-app/main/default/objects/OrderItemProductInfoKLW__c/OrderItemProductInfoKLW__c.object-meta.xml
<CustomObject>
    <label>Order Item: Product Info (KLW)</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Items: Product Info (KLW)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>