force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/CDD__c.field-meta.xml
<CustomField>
    <fullName>CDD__c</fullName>
    <label>Required RFS</label>
    <type>Date</type>
</CustomField>