force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/Inq_Total__c.field-meta.xml
<CustomField>
    <fullName>Inq_Total__c</fullName>
    <formula>BLANKVALUE(InqUnitPrice__c, 0) * BLANKVALUE(InqQuantuty__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inq Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>