force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/InqQuantuty__c.field-meta.xml
<CustomField>
    <fullName>InqQuantuty__c</fullName>
    <label>Inq. Qty</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>