force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/InqUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>InqUnitPrice__c</fullName>
    <label>Inq. Unit Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>