force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <formula>BLANKVALUE(OrderProduct__r.ITENumber__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITE Number</label>
    <type>Text</type>
</CustomField>