force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/NameForDoc__c.field-meta.xml
<CustomField>
    <fullName>NameForDoc__c</fullName>
    <formula>CASE(Order__r.Region__c,
  &apos;13&apos;, OrderProduct__r.NameForDoc__r.NameUA__c,
  &apos;19&apos;, OrderProduct__r.NameForDoc__r.NameRU__c,
		&apos;20&apos;, OrderProduct__r.NameForDoc__r.NameRU__c,
  OrderProduct__r.NameForDoc__r.NameEN__c
) + &apos; &apos; +  SpecVersion__r.Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name for Docs</label>
    <type>Text</type>
</CustomField>