force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Items: Product Info (KLW)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_KLW</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>