force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Items: Product Info (KLW)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_KLW</relationshipName>
    <type>Lookup</type>
</CustomField>