force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/OrderProductType__c.field-meta.xml
<CustomField>
    <fullName>OrderProductType__c</fullName>
    <formula>OrderProduct__r.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product Type</label>
    <type>Text</type>
</CustomField>