force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/ProdDetails__c.field-meta.xml
<CustomField>
    <fullName>ProdDetails__c</fullName>
    <formula>IF(OR(ISBLANK(DrawingVersion__c), ISBLANK(SpecVersion__c)), 
    ProductName__c,
    OrderProduct__r.ProdDetails__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Details</label>
    <type>Text</type>
</CustomField>