force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/ProdKind__c.field-meta.xml
<CustomField>
    <fullName>ProdKind__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod.Kind</label>
    <referenceTo>ProdKind__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (KLW)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_KLW</relationshipName>
    <type>Lookup</type>
</CustomField>