force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/ProdType__c.field-meta.xml
<CustomField>
    <fullName>ProdType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod. Type</label>
    <referenceTo>WheelProdType__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (KLW)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_KLW</relationshipName>
    <type>Lookup</type>
</CustomField>