force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>IF(ISBLANK(OrderProduct__r.Drawing__c),
			OrderProduct__r.Name__c,
   OrderProduct__r.KLWItemName__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name (OLD)</label>
    <type>Text</type>
</CustomField>