force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/Qty_t__c.field-meta.xml
<CustomField>
    <fullName>Qty_t__c</fullName>
    <label>Qty (t)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>