force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/SpecVersion__c.field-meta.xml
<CustomField>
    <fullName>SpecVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specification</label>
    <referenceTo>SpecVersion__c</referenceTo>
    <relationshipLabel>Order Items: Product Info (KLW)</relationshipLabel>
    <relationshipName>Order_Items_Product_Info_KLW</relationshipName>
    <type>Lookup</type>
</CustomField>