force-app/main/default/objects/OrderItemProductInfoKLW__c/fields/TotalSum__c.field-meta.xml
<CustomField>
    <fullName>TotalSum__c</fullName>
    <formula>Qty_t__c *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>