force-app/main/default/objects/OrderItemProductInfoKLW__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProdDetails__c</columns>
    <columns>Order__c</columns>
    <columns>NameForDoc__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderProductType__c</field>
        <operation>equals</operation>
        <value>Wheels</value>
    </filters>
    <label>All</label>
</ListView>